# light-control

./: .gitmodules  flake.nix  postmortem.txt
.github/workflows/: build.yaml
firmware/: .gitignore  CMakeLists.txt  config.toml  date.txt  main.py  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  ble.c  ble.h  button.c  button.h  byteorder.h  config.c  config.h  idf_component.yml  indicator.c  indicator.h  light.c  light.h  local_control.c  local_control.h  main.c  ruuvi.c  ruuvi.h  ruuvi_names.h  version.c
hardware/: .gitignore  light-control.kicad_pcb  light-control.kicad_pro  light-control.kicad_sch  sym-lib-table
hardware/footprints.pretty/: ESP32-C3-WROOM-02-NOTHERMAL.kicad_mod
